Update structural ui design

--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -6,12 +6,81 @@ html {
 }
 
 body {
-    /* Margin bottom by footer height */
     margin-bottom: 60px;
     padding-top: 40px;
     padding-bottom: 10px;
+    -moz-min-width: 320px;
+    -ms-min-width: 320px;
+    -o-min-width: 320px;
+    -webkit-min-width: 320px;
+    min-width: 320px;
 }
 
+.main-body {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.form-group,
+.container,
+.navbar,
+.navbar-header,
+.navbar-brand,
+.container-fluid,
+.row,
+.btn,
+.col-xs-1,
+.col-sm-1,
+.col-md-1,
+.col-lg-1,
+.col-xs-2,
+.col-sm-2,
+.col-md-2,
+.col-lg-2,
+.col-xs-3,
+.col-sm-3,
+.col-md-3,
+.col-lg-3,
+.col-xs-4,
+.col-sm-4,
+.col-md-4,
+.col-lg-4,
+.col-xs-5,
+.col-sm-5,
+.col-md-5,
+.col-lg-5,
+.col-xs-6,
+.col-sm-6,
+.col-md-6,
+.col-lg-6,
+.col-xs-7,
+.col-sm-7,
+.col-md-7,
+.col-lg-7,
+.col-xs-8,
+.col-sm-8,
+.col-md-8,
+.col-lg-8,
+.col-xs-9,
+.col-sm-9,
+.col-md-9,
+.col-lg-9,
+.col-xs-10,
+.col-sm-10,
+.col-md-10,
+.col-lg-10,
+.col-xs-11,
+.col-sm-11,
+.col-md-11,
+.col-lg-11,
+.col-xs-12,
+.col-sm-12,
+.col-md-12,
+.col-lg-12 {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
 /*START : Footer*/
 footer {
@@ -50,6 +119,9 @@ footer a:hover {
 }
 .selected-menu {
     color: #ffffff!important;
+}
+.navbar-toggle {
+    margin-right:0px
 }
 /*START : Customize navbar*/
 
@@ -341,7 +413,6 @@ div.user-menu div.user-menu-content:not(.active){
 .p0 {
     padding: 0 !important;
 }
-
 .search input {
     font-family: 'FontAwesome';
     padding: 6px 12px !important;
