--- a/BloodConnector.WebAPI/app/views/signup.html
+++ b/BloodConnector.WebAPI/app/views/signup.html
@@ -1,5 +1,8 @@
 ﻿<div class="row" data-ng-controller="signupController as vm">
-    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    <div class="col-md-2">
+        &nbsp;
+    </div>
+    <div class="col-md-8">
         <form class="form-signup" role="form" novalidate name="signupForm">
             <div data-ng-hide="!vm.messages.length" data-ng-class="(vm.savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
                 <div ng-hide="vm.savedSuccessfully">
@@ -12,7 +15,8 @@
                     {{vm.messages[0]}}
                 </div>
             </div>
-            <h2>Please Sign Up <small>It's free and always will be.</small></h2>
+            <h2>Please Sign Up <small>It's free and always will be.</small>
+            </h2>
             <hr class="colorgraph">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6">
@@ -48,7 +52,7 @@
                        ng-model="vm.registration.bloodGiven"
                        placeholder="E.g. 5"
                        max="50"
-                       tabindex="0" />
+                       tabindex="0"/>
                 <span class="help-block has-error" ng-if="signupForm.numBloodGiven.$dirty">
                     <span ng-show="signupForm.numBloodGiven.$error.max">Too long!</span>
                 </span>
@@ -125,12 +129,15 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input id="chkCondition" name="chkCondition" type="checkbox" ng-model="vm.registration.termsAndCondition" ng-false-value="0" required /> I accept &nbsp;
+                        <input id="chkCondition" name="chkCondition" type="checkbox" ng-model="vm.registration.termsAndCondition" ng-false-value="0" required/> I accept &nbsp;
                     </label>
                     <a data-backdrop="static" data-keyboard="false" data-toggle="modal" class="pointer-cursor" data-target="#myModal">this terms and conditions</a>
                 </div>
             </div>
             <button class="btn btn-lg btn-danger btn-block" type="button" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
         </form>
+    </div>
+    <div class="col-md-2">
+        &nbsp;
     </div>
 </div>
