--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -1,8 +1,8 @@
-﻿<div class="row" data-ng-controller="usersController as vm">
+﻿<div data-ng-controller="usersController as vm">
     <h2>List of our donor's &amp; receiver's</h2>
     <hr class="colorgraph">
     <div class="row search mb10">
-        <div class="col-xs-12 col-sm-4 col-md-4"></div>
+        <div class="col-xs-12 col-sm-4 col-md-4">&nbsp;</div>
         <div class="col-xs-12 col-sm-4 col-md-4">
             <input type="text" name="firstName" id="firstName" class="form-control"
                    placeholder="&#xf002; Search your donor"
@@ -11,49 +11,51 @@
                    tabindex="0"
                    autofocus/>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4"></div>
+        <div class="col-xs-12 col-sm-4 col-md-4">&nbsp;</div>
     </div>
 
     <div class="row search disable-text-selection">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-condensed table-hover">
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Contact Number</th>
-                    <th>Donate</th>
-                    <th>Blood Group</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="item in vm.items | filter: vm.searchText:strict | offset: vm.currentPage*vm.itemsPerPage | limitTo: vm.itemsPerPage">
-                    <td ng-bind="item.name"></td>
-                    <td ng-bind="item.email"></td>
-                    <td ng-bind="item.contactNumber"></td>
-                    <td class="h4 blue"><strong ng-bind="item.bloodGiven"></strong> times</td>
-                    <td ng-bind="item.bloodGroup"></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <nav aria-label="Page navigation" class="pull-right">
-            <ul class="pagination m0">
-                <li ng-class="vm.prevPageDisabled()">
-                    <a href="javascript:void(0);" ng-click="vm.prevPage()" aria-label="Previous">
-                        <span aria-hidden="true">&laquo; Prev</span>
-                    </a>
-                </li>
-                <li ng-repeat="n in vm.pages" ng-class="{active: n == vm.currentPage}" ng-click="vm.setPage(n)">
-                    <a href="javascript:void(0);">{{n+1}}</a>
+        <div class="col-md-12">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-condensed table-hover">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Contact Number</th>
+                        <th>Donate</th>
+                        <th>Blood Group</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="item in vm.items | filter: vm.searchText:strict | offset: vm.currentPage*vm.itemsPerPage | limitTo: vm.itemsPerPage">
+                        <td ng-bind="item.name"></td>
+                        <td ng-bind="item.email"></td>
+                        <td ng-bind="item.contactNumber"></td>
+                        <td class="h4 blue"><strong ng-bind="item.bloodGiven"></strong> times</td>
+                        <td ng-bind="item.bloodGroup"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <nav aria-label="Page navigation" class="pull-right">
+                <ul class="pagination m0">
+                    <li ng-class="vm.prevPageDisabled()">
+                        <a href="javascript:void(0);" ng-click="vm.prevPage()" aria-label="Previous">
+                            <span aria-hidden="true">&laquo; Prev</span>
+                        </a>
+                    </li>
+                    <li ng-repeat="n in vm.pages" ng-class="{active: n == vm.currentPage}" ng-click="vm.setPage(n)">
+                        <a href="javascript:void(0);">{{n+1}}</a>
 
-                </li>
-                <li ng-class="vm.nextPageDisabled()">
-                    <a href="javascript:void(0);" aria-label="Next" ng-click="vm.nextPage()">
-                        <span aria-hidden="true">Next &raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+                    </li>
+                    <li ng-class="vm.nextPageDisabled()">
+                        <a href="javascript:void(0);" aria-label="Next" ng-click="vm.nextPage()">
+                            <span aria-hidden="true">Next &raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </div>
