--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -511,6 +511,10 @@ input[name='sex'] {
     outline: none;
 }
 
+input[name='sex']:focus {
+    outline: none;
+}
+
 input[name='sex']:after {
     font-family: 'FontAwesome';
     display: inline-block;
