--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -98,8 +98,8 @@
                                 </tr>
                                 <tr>
                                     <td class="h4">Blood Group</td>
-                                    <td ng-hide="vm.editMode" ng-bind="vm.profile.bloodGroup"></td>
-                                    <td ng-show="vm.editMode">
+                                    <td ng-if="!vm.editMode" ng-bind="vm.profile.bloodGroup"></td>
+                                    <td ng-if="vm.editMode">
                                         <div class="form-group required" ng-class="{'has-error':profileForm.drpBloodGroup.$invalid && profileForm.drpBloodGroup.$dirty}">
                                             <select class="form-control" id="drpBloodGroup" name="drpBloodGroup" ng-model="vm.profile.bloodGroupId" required>
                                                 <option value="" disabled>Select Blood Group</option>
@@ -179,15 +179,27 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>Email</td>
-                                    <td><a href="mailto:info@support.com">info@support.com</a></td>
+                                    <td class="h4">Country</td>
+                                    <td ng-if="!vm.editMode" ng-bind="vm.profile.country"></td>
+                                    <td ng-if="vm.editMode">
+                                        <div class="form-group">
+                                            <select class="form-control" id="drpCountry" name="drpCountry" ng-model="vm.profile.countryId">
+                                                <option value="" disabled>Select Country</option>
+                                                <option ng-repeat="country in vm.countries" ng-value="country.id">{{country.name}}</option>
+                                            </select>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td>Phone Number</td>
-                                    <td>
-                                        123-4567-890(Landline)<br><br>555-4567-890(Mobile)
+                                    <td class="h4">Personal Identity Number</td>
+                                    <td ng-if="!vm.editMode" ng-bind="vm.profile.personalIdentityNum"></td>
+                                    <td ng-if="vm.editMode">
+                                        <div class="form-group required">
+                                            <input type="text" class="form-control" id="txtPersonalIdentity" name="txtPersonalIdentity"
+                                                    placeholder="National ID"
+                                                    ng-model="vm.profile.personalIdentityNum"/>
+                                        </div>
                                     </td>
-
                                 </tr>
 
                                 </tbody>
