Added created date and last updated date

--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -209,7 +209,7 @@
                 </div>
             </div>
             <div class="panel-footer text-right">
-                Last Update : <span class="text-info">May 05,2014,03:00 pm</span>
+                Last Update : <span class="text-info" ng-bind="vm.profile.lastUpdatedDate | date:'medium'"></span>
             </div>
 
         </div>
