--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -410,6 +410,9 @@ div.user-menu div.user-menu-content:not(.active){
 .mb5 {
     margin-bottom: 5px !important;
 }
+.mb0 {
+    margin-bottom: 0 !important;
+}
 .p0 {
     padding: 0 !important;
 }
